ajout de la reference pour l'entropie

--- a/edla/biblio.bib
+++ b/edla/biblio.bib
@@ -117,3 +117,14 @@ pages={142-147},
 keywords={cameras;image colour analysis;motion estimation;real-time systems;stochastic processes;teleconferencing;tracking;Canon VC-Cl camera;HCI applications;HP-9000 workstation;camera model;camera motion compensation;camera motion prediction;framegrabber;gaze tracking;human faces;image motion estimation;lighting conditions;lip reading;motion model;poses;real-time face tracker;search window prediction;skin color distributions;stochastic model;teleconferencing;views;Cameras;Computer science;Face detection;Face recognition;Humans;Motion estimation;Predictive models;Real time systems;Stochastic processes;Workstations},
 doi={10.1109/ACV.1996.572043},
 month={Dec},}
+
+//entropie
+@inproceedings{lepetit2005randomized,
+  title={Randomized trees for real-time keypoint recognition},
+  author={Lepetit, Vincent and Lagger, Pascal and Fua, Pascal},
+  booktitle={Computer Vision and Pattern Recognition, 2005. CVPR 2005. IEEE Computer Society Conference on},
+  volume={2},
+  pages={775--781},
+  year={2005},
+  organization={IEEE}
+}
