--- a/edla/solution.tex
+++ b/edla/solution.tex
@@ -78,11 +78,11 @@ principe est de sélectionner les caractéristiques les plus performantes pour l
 un calcul de probabilité utilisant l'entropie\footnote{valeur mesurant l'incertitude d'une donnée} des données.\\
 
 Une fois, qu'une ROI est formée autour de la main de l'utilisateur S. Bilal et al \cite{haarlike} changent d'espace colorimétrique
-afin de pouvoir différencier la main du reste de l'environnement. Pour cela, S. Bilal et al \cite{haarlike} choisissent 
+afin de pouvoir différencier la main du reste de l'environnement. Pour cela, ils choisissent 
 d'utiliser l'espace YCbCr qui permet d'obtenir des informations de chromaticité dont la valeur est presque équivalente
 quelle que soit la couleur de peau de l'utilisateur \cite{yoo1999fast}. Une fois que la ROI de la main est binarisé, il est possible
 de détecter le bout des doigts. Il faut tout d'abord calculer le centroïde de la forme de la main, puis la distance entre
-ce centroïde et chaque point du contour de la main. Le coutour d'une forme dans une image est défini par un changement brutal
+ce centroïde et chaque point du contour de la main. Le contour d'une forme dans une image est défini par un changement brutal
 de couleur. Cette méthode permet d'obtenir un graphe correspondant à la Fig. \ref{fig:handHisto}, où chaque pique représente un doigt.
 
 \begin{figure}[!h]
@@ -95,24 +95,24 @@ de couleur. Cette méthode permet d'obtenir un graphe correspondant à la Fig. \
 \newpage
 
 Afin de pouvoir traquer la main, S. Bilal et al \cite{haarlike} utilisent l'algorithme de Kalman \cite{kalman}.
-Cet algorithme permet de prédire la position d'un objet, ainsi dans la méthode que nous étudions la main sera traquée malgrès
+Cet algorithme permet de prédire la position d'un objet, ce qui va permettre de traquer la main malgré
 le bruit présent dans l'image. De plus, cette méthode n'a besoin de connaître que l'état précédent à celui 
 qui est calculé. Etant donné que l'algorithme de Kalman est un algorithme de prédiction, il peut ne pas être très
-précis lorsque l'utilisateur effectue des changements de direction rapide avec sa main.\\
+précis lorsque l'utilisateur effectue des changements de direction rapides avec sa main.\\
 
 Cette méthode, nous permet de déterminer la position de la main et de détecter le bout des doigts. Cependant, elle ne nous permet
 pas de réaliser notre projet entièrement. En effet, nous avons besoin de plus de précision en détectant les articulations
 de la main.
 
 \subsection{Détection et suivi de la main avec une image de profondeur}
-Une seconde solution utilise une image de profondeur plutôt que l'image binarisée grâce au changement d'espace colorimétrique.
+Une seconde solution utilise une image de profondeur plutôt que l'image binarisée avec le changement d'espace colorimétrique.
 Pour réaliser la détection de la main, il faut dans un premier temps déterminer une ROI
-autour ce celle-ci. Cette première étape a été expliqué par T. Sharp et al\cite{export:238453}, où les auteurs utilisent un classifieur
+autour de celle-ci. Cette première étape a été expliquée par T. Sharp et al\cite{export:238453}, où les auteurs utilisent un classifieur
 qui se repose sur la méthode développée dans \cite{export:145347}. Ce classifieur permet d'effectuer de la reconnaissance
 des parties du corps et permet également de détecter les articulations. Pour cela, cette méthode utilise l'algorithme \cite{lepetit2005randomized} qui crée un arbre de décision partir des données d'entrainement et descend dans celui-ci
 jusqu'à atteindre une feuille. 
-Les feuilles de cette arbre sont les différentes partie du corp à reconnaître. Cet arbre est construit en calculant
-l'entropie de chaque pixel, ce qui permet de déterminer à quel partie du corps il appartient.
+Les feuilles de cet arbre sont les différentes parties du corps à reconnaître. Cet arbre est construit en calculant
+l'entropie de chaque pixel, ce qui permet de déterminer à quelle partie du corps il appartient.
 
 \begin{figure}[!h]
  \begin{center}
@@ -122,30 +122,30 @@ l'entropie de chaque pixel, ce qui permet de déterminer à quel partie du corps
  \end{center}
 \end{figure}
 
-On voit sur la Fig. \ref{fig:bodyrecognition} que l'articulation de la main est détecté, il est alors possible de construire
-une ROI autour de ce point. Cette méthode a été implémenté dans la caméra Kinect.\\
+On voit sur la Fig. \ref{fig:bodyrecognition} que l'articulation de la main est détectée, il est alors possible de construire
+une ROI autour de ce point. Cette méthode a été implémentée dans la caméra Kinect.\\
 
-La méthode utilisé dans \cite{export:238453} ne nécessite aucune donnée provenant d'image antérieur. L'ensemble
-des calculs sont réalisés sur une image à partir d'une base de connaissance contenant différente posture de la
+La méthode utilisée dans \cite{export:238453} ne nécessite aucune donnée provenant d'image antérieure. L'ensemble
+des calculs sont réalisés sur une image à partir d'une base de connaissances contenant différentes postures de la
 main. Etant donnée qu'il est impossible de stocker toutes les postures de la main, la méthode de \cite{export:238453}
-calcule une fonction energy permettant de déterminer quel est la posture la plus représentative de celle de la main
-de l'utilisateur. Cette fonction energy est calculé à partir des pixels du modèle et ceux de l'image de profondeur
-capturé par la caméra. Elle est défini par le calcul suivant :
+calcule une fonction energy permettant de déterminer quelle est la posture la plus représentative de celle de la main
+de l'utilisateur. Cette fonction energy est calculée à partir des pixels du modèle et ceux de l'image de profondeur
+capturée par la caméra. Elle est définie par le calcul suivant :
 \begin{equation}
  E^{au}(Z_{roi}, R_{roi}) = \sum_{ij} \bar{\rho(z_{ij}} - r_{ij})
 \end{equation}
 Dans cette équation, $z_{ij}$ représente le pixel à la position (i,j) dans le modèle et $r_{ij}$ représente le pixel à la position (i,j)
-provenant de l'image de profondeur. La fonction $\rho(e)$ quand à elle est équivalent à $min(|e|,\tau)$ ou $\tau$ est une valeur fixe permettant d'éliminer le bruit présent dans l'image de profondeur.
+provenant de l'image de profondeur. La fonction $\rho(e)$ quant à elle est équivalente à $min(|e|,\tau)$ ou $\tau$ est une valeur fixe permettant d'éliminer le bruit présent dans l'image de profondeur.
 
 \section{Evaluation des solutions envisagées}
 Parmi les solutions que nous avons envisagées dans cet état de l'art, nous avons vu que la solution avec une 
-image couleur pouvait être limité. Celle-ci nécessite un algorithme de tracking permettant de suivre au mieu
-la main de l'utilisateur. L'algorithme de Kalman est limité, car peu précis lors de changement d'orientation
-brusque et il est également assez complexe à mettre en place.\\
+image couleur pouvait être limitée. Celle-ci nécessite un algorithme de tracking permettant de suivre au mieux
+la main de l'utilisateur. L'algorithme de Kalman est efficace, mais peu précis lors de changements d'orientation
+brusques et il est également assez complexe à mettre en place.\\
 
 Notre choix pour la réalisation de ce projet se dirige plutôt vers l'utilisation de la caméra de profondeur.
-La Kinect ayant déjà implémenté une partie des étapes permettant la réalisation de notre projet, nous pourrons
-nous concentrer sur la partie plus spécifique de détection et de localisation des articulation de la main. 
+La Kinect ayant déjà une implémentation d'une partie des étapes permettant la réalisation de notre projet, nous pourrons
+nous concentrer sur la partie plus spécifique de détection et de localisation des articulations de la main. 
 Pour cela, nous avons vu que la méthode utilisant l'image de profondeur pouvait être efficace grâce à la 
 détermination de la posture de la main. Cela nous permet ainsi d'ajuster un modèle de main et de fabriquer
 le squelette en fonction de ce modèle.\\
