ajoute d'info context

--- a/edla/presentation.tex
+++ b/edla/presentation.tex
@@ -5,7 +5,7 @@
 %doit contenir la fonction de ce rapport : etat de l'art + previsionnel
 %dans le but de réaliser un projet
 \section{Présentation du projet}
-Aujourd'hui, la détection les points des articulations du corps humain 
+Aujourd'hui, détecter les points des articulations du corps humain 
 est une technique courante, grâce à certain périphérique tel que la 
 Kinect. Les points des articulations du corps forment le squelette 3D. 
 Cependant, les squelettes 3D sont en générales peu riche en informations 
@@ -42,7 +42,7 @@ Ensuite, nous souhaitons animer un modèle 3D, qui peut être un modèle
 d'humain, de robot ou bien de créature. Les mouvement de ce modèle 
 doivent suivre les points du squelette préalablement détecté, de 
 manière cohérente par rapport au mouvement de la personne devant la 
-Kinect. Nous utilisons le moteur de jeu Unity 3D, pour cette partie de 
+Kinect. Nous utilisons le moteur de jeu Unity3D, pour cette partie de 
 modélisation.\\
 
 Dans le cadre de ce projet, nous sommes amené à rédiger un état de la 
@@ -57,7 +57,14 @@ profondeur de la scène filmée.\\
 %doit contenir l'ensemble des informations sur l'équipe -> sur quoi porte leur recherche
 \section{Contexte}
 La réalisation de ce projet se fait avec l'équipe 3D SAM\footnote{Modeling 
-and Analysis of Static and Dynamic Shapes}. Cette équipe conçoit de 
+and Analysis of Static and Dynamic Shapes}. Cette équipe appartient au 
+centre CRIStAL\footnote{Centre de Recherche en Informatique, 
+Signal et Automatique de Lille}. Ce centre de recherche est le 
+nouveau pôle de recherche qui regroupe les laboratoires d'Informatique, 
+Signal et Automatique de Lille.\\
+
+
+Cette équipe conçoit de 
 nouveaux outils et méthodes d'analyse des formes des objets 3D statiques 
 et dynamique. Ils travaillent sur l'analyse de formes des objects 3D et la 
 modélisation des variations des formes dans des vidéos 3D. Nous démarrons 
