--- a/edla/presentation.tex
+++ b/edla/presentation.tex
@@ -56,21 +56,36 @@ profondeur de la scène filmée.\\
 
 %doit contenir l'ensemble des informations sur l'équipe -> sur quoi porte leur recherche
 \section{Contexte}
-La réalisation de ce projet se fait avec l'équipe 3D SAM\footnote{Modeling 
-and Analysis of Static and Dynamic Shapes}. Cette équipe appartient au 
-centre CRIStAL\footnote{Centre de Recherche en Informatique, 
-Signal et Automatique de Lille}. Ce centre de recherche est le 
-nouveau pôle de recherche qui regroupe les laboratoires d'Informatique, 
-Signal et Automatique de Lille.\\
+La réalisation de ce projet se fait avec l'équipe 3D 
+SAM\footnote{Modeling and Analysis of Static and Dynamic Shapes}. 
+Cette équipe appartient au centre CRIStAL\footnote{Centre de Recherche 
+en Informatique, Signal et Automatique de Lille}. Ce centre de 
+recherche est le nouveau pôle de recherche qui regroupe les 
+laboratoires d'Informatique, Signal et Automatique de Lille.\\
 
 
-Cette équipe conçoit de 
-nouveaux outils et méthodes d'analyse des formes des objets 3D statiques 
-et dynamique. Ils travaillent sur l'analyse de formes des objects 3D et la 
-modélisation des variations des formes dans des vidéos 3D. Nous démarrons 
-ce projet proposé par l'équipe, il ne s'agit pas d'une reprise d'un projet 
-déjà entamé. Nous travaillons avec la caméra Kinect2 et l'outils Unity3D 
-pour la modélisation et l'animation de la main.
+L'équipe 3D SAM est basée à l'école d'ingénieur Télécom Lille 1. 
+Cette équipe conçoit de nouveaux outils et méthodes d'analyse des 
+formes des objets 3D statiques et dynamique. Ils travaillent sur 
+l'analyse de formes des objects 3D et la modélisation des variations 
+des formes dans des vidéos 3D.
+
+\begin{figure}[!h]
+  \begin{center}
+    \includegraphics[width=300px]{images/accueil-illus.jpg}
+    \caption{Exemples de travaux de l'équipe 3D SAM}
+  \end{center}
+\end{figure}
+
+Le projet \og Hand Kinect \fg est un nouveau projet proposé par 
+l'équipe. Nous sommes les premiers à travailler sur ce projet, il 
+ne s'agit pas d'une reprise d'un projet déjà entamé auparavant.\\
+
+Pour la réalisation de ce projet, nous disposons d'une caméra Kinect2. 
+Pour les représentation et animation 3D, il nous faut un environnement 
+de modélisation 3D, nous utilisons Unity3D comme montré précédemment. 
+Nous disposons également, d'un module nous permettant d'extraire les 
+points des articulation de la main.
 
 %pourquoi faire ce projet (plus de precision?) + cas concret ou on pourrait l'utiliser (ex : medecine)
 \section{Problèmatique}
