--- a/edla/main.tex
+++ b/edla/main.tex
@@ -14,6 +14,7 @@
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
 \usepackage[francais]{babel}
+\usepackage{float}
 
 %couleur
 \usepackage{color}
