--- a/edla/presentation.tex
+++ b/edla/presentation.tex
@@ -31,7 +31,7 @@ des articulations des mains, nous disposons d'un module fourni par
 nos tuteurs de projet. Ainsi, l'assemblage de ces points nous permet 
 d'obtenir le squelette 3D complet de la personne devant la Kinect.\\
 
-\begin{figure}[!h]
+\begin{figure}[H]
   \begin{center}
     \includegraphics[width=350px]{images/joint_detection.png}
     \caption{Détection des articulations des mains}
@@ -42,8 +42,20 @@ Ensuite, nous souhaitons animer un modèle 3D, qui peut être un modèle
 d'humain, de robot ou bien de créature. Les mouvement de ce modèle 
 doivent suivre les points du squelette préalablement détecté, de 
 manière cohérente par rapport au mouvement de la personne devant la 
-Kinect. Nous utilisons le moteur de jeu Unity3D, pour cette partie de 
+Kinect. Nous utilisons Unity3D, pour cette partie de 
 modélisation.\\
+
+Unity3D est un moteur de jeu qui permet de développé rapidement des 
+environnement et application 3D. Il est facile d'obtenir des 
+application compatible sur de nombreuse plateforme. Ce moteur 
+propose également une licence gratuit accés compléte.\\
+
+\begin{figure}[H]
+  \begin{center}
+    \includegraphics[width=350px]{images/Unity3D.jpg}
+    \caption{Interface de Unity3D}
+  \end{center}
+\end{figure}
 
 Dans le cadre de ce projet, nous sommes amené à rédiger un état de la 
 l'art. Cette première partie, nous permet de synthétiser et sélectionner 
@@ -70,7 +82,7 @@ formes des objets 3D statiques et dynamique. Ils travaillent sur
 l'analyse de formes des objects 3D et la modélisation des variations 
 des formes dans des vidéos 3D.
 
-\begin{figure}[!h]
+\begin{figure}[H]
   \begin{center}
     \includegraphics[width=300px]{images/accueil-illus.jpg}
     \caption{Exemples de travaux de l'équipe 3D SAM}
@@ -89,18 +101,30 @@ points des articulation de la main.
 
 %pourquoi faire ce projet (plus de precision?) + cas concret ou on pourrait l'utiliser (ex : medecine)
 \section{Problèmatique}
-La Kinect permet déjà de détecter un squelette contenant quinze représentant 
-différentes articulation du corps humain. 
+D'abord, la Kinect 2 peux déjà de suivre 6 personne à la fois. Elle 
+détecte un squelette de 25 points (voir Fig. 
+\ref{fig:skeleton_kinect2}). Cependant, les mains ne sont représentées 
+que par 3 point, qui sont le centre de main, le pouce et le bout du 
+majeur. C'est une amélioration par rapport à la Kinect 1, qui de 
+détecter que le centre de la main.\\
+
 %a revoir
-D'autre outils permettent de détecter les mains des utilisateurs, cependant leur
-champ de vision n'est pas assez important pour diverse application.
+D'autre outils permettent de détecter les mains des utilisateurs. Par exemple le Leap Motion détecte les articulations des mains. Néanmoins,
+ce capteur est limité car il faut garder les mains proches et dans le 
+cadre du capture. Leap Motion ne permet pas de détecter le squelette 
+d'une personne.\\
+
 %a revoir
-Puisque, 
+À partir de ces constats nous pouvons formuler la problèmatique 
+suivante. Puisque, 
 les mains sont très habile, il peut être difficile de detecter de leurs 
-articulations dans des positions contraignante. Les problèmes liés à 
-la luminausitée sont récurrents, il est souhaitable d'utiliser des 
-techniques robustent et invariantent à la luminausitée, et qui restent 
-efficace.
+articulations dans des positions contraignante. Autres choses, les 
+problèmes liés à la luminausitée sont récurrents, il est souhaitable 
+d'utiliser des techniques robustent et invariantent à la luminausitée, 
+mais qui restent efficace. De plus, il existe encore peu de méthodes 
+permettant de détecter la pose et les articulations des mains dans 
+un point de vue de caméra qui permetterais de retrouver l'ensemble du
+squelette humain.  
 
 %comment réaliser ce projet, avec quoi + résultat attendu
 \section{Objectif}
@@ -115,7 +139,7 @@ Cette combinaison aussi appelée YCbCr, avec Y la luminance, U/Cb la composante 
 En plus de sa caméra, elle possède 3 diffuseur de rayonnement infrarouges qui servent à dessiner une carte de profondeur.
 Les autres fonctionnalités ne nous intéresseront pas résoudre notre problèmatique.\\
 
-\begin{figure}[!h]
+\begin{figure}[H]
  \center
  \includegraphics[width=300px]{images/kinect-v2.png}
  \caption{Caméra Kinect 2}
@@ -131,10 +155,11 @@ Ces deux flux peuvent servir à détecter la main (méthodes expliquées dans la
 Le SDK de la Kinect fournit des informations déjà traitées. 
 Par exemple pour notre projet, les jointures du poignet, du centre de la main, du sommet du pouce et du sommet du majeur.
 
-\begin{figure}[!h]
+\begin{figure}[H]
 \center
 \includegraphics[width=250px]{images/kinec2_skel.png}
 \caption{Squelette de l'utilisateur détecté par la Kinect 2}
+\label{fig:skeleton_kinect2}
 \end{figure}
 
 %présentation du materiel + image materiel
