--- a/edla/presentation.tex
+++ b/edla/presentation.tex
@@ -102,11 +102,11 @@ points des articulation de la main.
 %pourquoi faire ce projet (plus de precision?) + cas concret ou on pourrait l'utiliser (ex : medecine)
 \section{Problèmatique}
 D'abord, la Kinect 2 peux déjà de suivre 6 personne à la fois. Elle 
-détecte un squelette de 25 points (voir Fig. 
-\ref{fig:skeleton_kinect2}). Cependant, les mains ne sont représentées 
-que par 3 point, qui sont le centre de main, le pouce et le bout du 
-majeur. C'est une amélioration par rapport à la Kinect 1, qui de 
-détecter que le centre de la main.\\
+détecte un squelette de 26 points (voir Fig. 
+\ref{fig:skeleton_kinect2} et \ref{fig:kinect1vs2}). Cependant, les 
+mains ne sont représentées que par 3 point, qui sont le centre de 
+main, le pouce et le bout du majeur. C'est une amélioration par 
+rapport à la Kinect 1, qui de détecter que le centre de la main.\\
 
 %a revoir
 D'autre outils permettent de détecter les mains des utilisateurs. Par exemple le Leap Motion détecte les articulations des mains. Néanmoins,
@@ -128,9 +128,29 @@ squelette humain.
 
 %comment réaliser ce projet, avec quoi + résultat attendu
 \section{Objectif}
-L'objectif de notre projet est d'utiliser la Kinect 2 dans le but de détecter les différentes articulations
-de la main et de modéliser celle-ci dans une application Unity.
-%TODO ajouter les différentes étape de nos recherches 
+Le premier objectif est donc la détection des points des articulations 
+des mains. Pour cela, nous utilisons le module fournit par nos 
+tuteurs. Ainsi, il faut extraire les points des articulation des 
+mains, afin de les rendre utilisable dans Unity3D.\\
+
+En suite, un second objectif consiste modéliser les points des 
+articulations des mains, dans le but d'obtenir une première 
+visualisation simple. Il faut également pouvoir récupérer le 
+squelette calculer par la Kinect 2.\\
+
+Le troisième objectif est de déterminer quelque type de modèle 3D, 
+nous allons utiliser avec de représenter la main. Et, déterminer 
+si il faut segmenter les modèles de mains pour notre application.\\
+
+Après cela, le quatrième objectif est de faire correspondre un 
+modèle 3D de main avec les points des articulations détectés. Un 
+script C\# pour Unity3D peut permettre d'effectuer cette 
+correspondance.\\
+
+Enfin le dernier objectif est de rassembler les points des articulations 
+des mains détecté et les points du squelette calculés par la Kinect 2. 
+Afin de animer un personnage virtuel 3D dont les mouvements sont guidés 
+par les gestes de l'utilisateur devant la Kinect 2. 
 
 \section{Présentation de la Kinect 2}
 La Kinect 2 de Microsoft possède une caméra couleur en mode YUV de 1920x1080 pixel.
@@ -160,6 +180,14 @@ Par exemple pour notre projet, les jointures du poignet, du centre de la main, d
 \includegraphics[width=250px]{images/kinec2_skel.png}
 \caption{Squelette de l'utilisateur détecté par la Kinect 2}
 \label{fig:skeleton_kinect2}
+\end{figure}
+
+\begin{figure}
+  \begin{center}
+    \includegraphics[width=250px]{images/Kinect1vs2.png}
+    \caption{Différence Kinect 1 et Kinect 2}
+    \label{fig:kinect1vs2}
+  \end{center}
 \end{figure}
 
 %présentation du materiel + image materiel
