correction de l'intro et d'une partie de la presentation

--- a/edla/intro.tex
+++ b/edla/intro.tex
@@ -5,7 +5,10 @@ Durant notre master IVI\footnote{Le master Image Vision Interaction est
 une spécialité du master informatique de l'université de Lille 1}, 
 nous avons l'occasion de réaliser un projet orienté recherche. Nous avons 
 sélectionné le sujet \og Hand Kinect \fg, car nous nous intéressons à la 
-modélisation 3D et aux dernières techniques d'acquisition.\\
+modélisation 3D et aux dernières techniques d'acquisition.
+De plus, ce projet est en rapport avec chacune de nos matières de
+notre master. Nous utilisons des notion de modélisation 3D avec la main, de vision artificielle avec l'exploitation d'une caméra, de réalité virtuelle et l'interaction avec l'environnement dans lequel la main va se déplacer et de nouvelle intéraction
+homme machine qui est le sujet de ce projet.\\
 
 L'homme utilise continuellement ses mains de manière naturelle. Nous 
 sommes extrêmement précis et habiles avec elles. Elles nous permettent 
@@ -13,13 +16,13 @@ de ressentir des détails très fins. Au jour de l'écriture de ce rapport,
 utiliser les mains pour interagir avec un ordinateur reste encore limité.\\
 
 % état de la question
-Les études sont nombreuses, dans les domaines de la détection des mains 
-et de leurs poses, ainsi que le suivi de celle-ci et la reconstruction 
+Les études sont nombreuses dans le domaine de la détection des mains, 
+de la reconnaissance de leurs poses, dans leur suivi et dans la reconstruction 
 3D des articulations des mains et de leurs formes. Cela fait plusieurs 
 années, que la recherche scientifique et les techniques d'acquisition 
 évoluent. Dans les années 90, la littérature considère principalement les 
-caméras dont la sortie est RGB. Les méthodes proposent généralement la 
-détection de la main, de sa pose et de sa forme. Ensuite, des techniques 
+caméras dont la sortie est un flux RGB. Les méthodes proposent généralement la 
+détection de la main, de sa pose et de sa forme. Par la suite, des techniques 
 utilisant plusieurs caméras et des systèmes de marquage sont apparus. 
 Enfin, depuis les années 2005, les caméras de profondeur ont permis 
 l'amélioration et la création de certaines techniques. Maintenant, il 
@@ -37,11 +40,9 @@ Les variations de luminosité sont courantes, la méthode doit être robuste
 à ces variations. L'application doit être temps réel, pour fonctionner de 
 manière interactive.\\
 
-
 % plan
 Dans un premier temps, nous décrivons notre projet, afin de comprendre 
-précisément le problème et les enjeux liés au projet. Ensuite, nous 
+précisément le problème et les enjeux liés à celui-ci. Ensuite, nous 
 réalisons un état de l'art ainsi qu'un prévisionnel afin de déterminer 
 les solutions adéquates pour notre problème et de planifier les tâches 
-qui seront à réaliser pour la réussite du projet. Enfin, nous déterminons 
-la meilleure solution pour notre projet.\\
+qui seront à réaliser pour la réussite de l'application finale. Enfin, nous déterminons la meilleure solution pour notre projet.\\
