--- a/edla/previsionnel.tex
+++ b/edla/previsionnel.tex
@@ -51,10 +51,18 @@ le mesh de la main. Cette méthode est expliqué dans \cite{export:217428}.\\
 Une fois que la représentation de la main sera effectué dans une scène Unity, nous devrons réaliser une 
 application de démonstration permettant de montrer différent type d'interaction possible avec notre 
 méthode. Pour cela, nous nous sommes inspirées de plusieurs applications développées pour l'outil
-Leap Motion. Notre idée pour cette application de démonstration est de fabriquer plusieurs cube dans 
+Leap Motion(voire Fig. \ref{fig:example}). Notre idée pour cette application de démonstration est de fabriquer plusieurs cube dans 
 une scène et de demander à l'utilisateur de les empiler pour fabriquer une pyramide. Nous avons pris
 ce concept, car ce type d'application n'est pas réalisable avec d'autre type d'IHM et que cela demande
 beaucoup de précision.
+
+\begin{figure}
+  \begin{center}
+    \includegraphics[width=10cm]{images/exampleHand.png}
+    \caption{Exemple d'application rencontré pour la Leap Motion}
+    \label{fig:example}
+  \end{center}
+\end{figure}
 
 \begin{figure}
   \begin{center}
