ajout de l'image exemple

--- a/edla/presentation.tex
+++ b/edla/presentation.tex
@@ -119,29 +119,30 @@ squelette humain.
 
 %comment réaliser ce projet, avec quoi + résultat attendu
 \section{Objectif}
-Le premier objectif est la détection des points des articulations 
-des mains. Pour cela, nous utilisons le module fournit par nos 
-tuteurs. Ainsi, il faut extraire les points des articulation des 
-mains, afin de les rendre utilisable dans Unity3D.\\
-
-En suite, un second objectif consiste modéliser les points des 
-articulations des mains, dans le but d'obtenir une première 
-visualisation simple. Il faut également pouvoir récupérer le 
-squelette calculer par la Kinect 2.\\
-
-Le troisième objectif est de déterminer quelque type de modèle 3D, 
-nous allons utiliser avec de représenter la main. Et, déterminer 
-si il faut segmenter les modèles de mains pour notre application.\\
-
-Après cela, le quatrième objectif est de faire correspondre un 
-modèle 3D de main avec les points des articulations détectés. Un 
-script C\# pour Unity3D peut permettre d'effectuer cette 
-correspondance.\\
-
-Enfin le dernier objectif est de rassembler les points des articulations 
-des mains détecté et les points du squelette calculés par la Kinect 2. 
-Afin de animer un personnage virtuel 3D dont les mouvements sont guidés 
-par les gestes de l'utilisateur devant la Kinect 2. 
+%TODO objectif de l'état de l'art
+%Le premier objectif est la détection des points des articulations 
+%des mains. Pour cela, nous utilisons le module fournit par nos 
+%tuteurs. Ainsi, il faut extraire les points des articulation des 
+%mains, afin de les rendre utilisable dans Unity3D.\\
+%
+%En suite, un second objectif consiste modéliser les points des 
+%articulations des mains, dans le but d'obtenir une première 
+%visualisation simple. Il faut également pouvoir récupérer le 
+%squelette calculer par la Kinect 2.\\
+%
+%Le troisième objectif est de déterminer quelque type de modèle 3D, 
+%nous allons utiliser avec de représenter la main. Et, déterminer 
+%si il faut segmenter les modèles de mains pour notre application.\\
+%
+%Après cela, le quatrième objectif est de faire correspondre un 
+%modèle 3D de main avec les points des articulations détectés. Un 
+%script C\# pour Unity3D peut permettre d'effectuer cette 
+%correspondance.\\
+%
+%Enfin le dernier objectif est de rassembler les points des articulations 
+%des mains détecté et les points du squelette calculés par la Kinect 2. 
+%Afin de animer un personnage virtuel 3D dont les mouvements sont guidés 
+%par les gestes de l'utilisateur devant la Kinect 2. 
 
 \section{Présentation de la Kinect 2}
 La Kinect 2 de Microsoft possède une caméra couleur en mode YUV de 1920x1080 pixel.
