--- a/edla/presentation.tex
+++ b/edla/presentation.tex
@@ -174,6 +174,20 @@ Par exemple pour notre projet, les jointures du poignet, du centre de la main, d
 \label{fig:skeleton_kinect2}
 \end{figure}
 
+\subsection{Différences entre Kinect et Kinect 2}
+
+Comme on peut la voir dans l'image ci-dessous, la Kinect 2 est une amélioration de tout les aspect de la Kinect précédente.
+
+Les amélioration qui nous intéressent pour le projet sont : 
+\begin{itemize}
+ \item L'augmentation de la résolution de la caméra de profondeur, qui apporte une précision plus importante mais cause un problème de performance : plus de pixel à traiter.
+ \item L'augmentation des champs de vision horizontaux et verticaux
+ \item Le plus important : l'augmentation du nombre de point détectés, principalement l'ajout de 3 points au niveau de la main
+\end{itemize}
+
+Un point négatif cependant : la distance minimale passe de 40 à 50cm 
+
+
 \begin{figure}
   \begin{center}
     \includegraphics[width=250px]{images/Kinect1vs2.png}
