--- a/edla/presentation.tex
+++ b/edla/presentation.tex
@@ -24,10 +24,10 @@ précision peut être utile dans divers domaines :
 
 Le projet \og Hand Kinect \fg consiste à extraire depuis une Kinect 2, 
 les points correspondants aux articulations du corps grâce aux 
-fonctions du SDK de ce capteur. De plus, nous devons récupérer les points 
-des articulations des mains, pour cela nous étudions plusieurs méthodes 
-réalisées jusqu'à maintenant. Ainsi, l'assemblage de ces points nous 
-permet d'obtenir le squelette 3D complet de la personne devant la 
+fonctions du SDK de ce capteur. De plus, nous devons récupérer les 
+points des articulations des mains, pour cela nous étudions plusieurs 
+méthodes réalisées jusqu'à maintenant. Ainsi, l'assemblage de ces points 
+nous permet d'obtenir le squelette 3D complet de la personne devant la 
 Kinect.\\
 
 \begin{figure}[H]
@@ -147,8 +147,24 @@ squelette humain.
 %Afin de animer un personnage virtuel 3D dont les mouvements sont guidés 
 %par les gestes de l'utilisateur devant la Kinect 2. 
 
-L'objectif de cette première partie du projet est de clarifier nos 
-travaux. Pour cela, \ldots
+Dans un premier temps, le but de ce rapport est d'appréhender les 
+différentes méthodes exsistantes sur la détection des mains, leurs 
+articulations et reconnaissance de la pose des mains. Aussi de 
+comprendre les principes utilisés pour la modélisation en 3D des 
+mains.\\ 
+
+Etudier les techniques de détection des mains et leurs acticulations, 
+a pour objectif de bien cerner les méthodes qui peuvent être utiliser 
+par le module. Celui-ci fournit les positions spatiales des 
+acticulations des mains.\\
+
+Ensuite, le but l'étude des techniques de modélisation des mains en 
+3D est de pouvoir animer les mains de façon naturelle dans Unity3D.\\
+
+Le dernière objectif, de cette permière partie, est de faire une 
+planification des tâches à effectuer. Ceci permet de s'organiser et 
+de voir si les objectifs future sont réalisable dans les temps 
+impartis.\\  
 
 
 \section{Présentation de la Kinect 2}
