ajout de la partie à alexis + icp

--- a/edla/previsionnel.tex
+++ b/edla/previsionnel.tex
@@ -21,7 +21,7 @@ la même méthode de reconnaissance des parties du corps que la Kinect \cite{exp
 \section{Planification des tâches}
 Nous avons décomposé le projet en plusieurs étapes afin d'avoir des objectifs réalisables en 
 un minimum de temps avec certains objectifs faisables en parallèle afin de pouvoir nous répartir
-les tâches. Le but étant de réaliser tout l'aspect recherche des articulations et modélisation de la main assez rapidement pour 
+les tâches. Le but étant de réaliser tout l'aspect recherche sur les articulations et la modélisation de la main assez rapidement pour 
 avoir plus de temps dans la réalisation d'une application démonstrative assez complète. Cette application
 permettra de voir un maximum de fonctionnalité réalisable avec ce type d'interaction.\\
 
